# logisim-cpu

./: .gitignore  Makefile  README.md  cpu.circ  cpu_horizontal.circ  cpu_mod.circ  create_rom.py  microcode.raw  open  pyproject.toml  run
assembly/: add.asm  count_3.asm
binaries/: add.raw
compiler/: architecture.py  assembler.py  create_microcode.py  instructions.py  linker.py  microcode.py  parsing.py  raw.py  sappy.py  setup.py
cpus/: SAP-1.circ
diagrams/: assembly.html  object-code.html
examples/: add2.raw  copy.raw  count_3.raw
microcode/: SAP-1.raw  SAP-1b.raw
programs/: add.asm  add.raw  count_3.asm  count_3.raw  multiply.asm  multiply.raw  nop.raw  sub.raw
scripts/: format.py  run
